# nrftw-save-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
docs/: cerimal_binary.md  enchantments.md
e2e/: appearance.spec.ts  catalog-cache.spec.ts  editor.spec.ts  equipment-catalog.spec.ts  landing.spec.ts
examples/: char_chefoobar.cerimal  char_exalted.cerimal  char_save_1.cerimal  char_save_2.cerimal  char_save_filled.cerimal  failed_save.cerimal  realm_save.cerimal
public/: cerimal_zstd.dict
scripts/: build_catalog_v2.py  bundle_catalog.py  generate_unique_item_presets.py  prepare-pages-catalog.mjs  regenerate_static_assets.py  scrape_enchants_table.mjs  validate_rolls.py
src/: App.svelte  app.css
src/lib/: AppearancePanel.svelte  CatalogSearch.svelte  Editor.svelte  EnchantmentPicker.svelte  Inspector.svelte  InventoryGrid.svelte  ItemEditor.svelte  LandingPage.svelte  MainLayout.svelte  SaveEditor.svelte  StatsPanel.svelte  TreeNode.svelte  bridge.ts  catalog.ts  inventory-assets.ts  quality.test.ts  quality.ts  types.ts  unique-items.ts
src/lib/data/: all_unique_item_enchantments.json
src/wasm-pkg/: nrftw_wasm.d.ts  nrftw_wasm.js  nrftw_wasm_bg.wasm  nrftw_wasm_bg.wasm.d.ts  package.json
wasm/: Cargo.toml
wasm/src/: document.rs  dumper.rs  lib.rs  mutations.rs  state.rs
wasm/src/parser/: content.rs  mod.rs  reader.rs  schema.rs  types.rs
wasm/tests/: dump_cerimal.rs  inventory_snapshot.rs  item_mutations.rs  parse_cerimal.rs
