[package]
name = "nrftw_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen  = "0.2"
js-sys        = "0.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
xxhash-rust   = { version = "0.8", features = ["xxh64"] }
zstd          = "0.13"

[profile.release]
opt-level = "s"
lto = true
