[package]
name = "nrftw_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cerimal-cli"
path = "src/bin/cli.rs"

[dependencies]
wasm-bindgen  = "0.2"
js-sys        = "0.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
xxhash-rust   = { version = "0.8", features = ["xxh64"] }
zstd          = "0.13"
clap          = { version = "4.0", features = ["derive"] }

# Only for the native CLI binary; not compiled for wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"

[profile.release]
opt-level = "s"
lto = true
